# financier

./: .gitignore  README.md  angular.json  app.py  package-lock.json  package.json  proxy.conf.json  pyproject.toml
api/: README.md  pyproject.toml
api/financier/sandbox/: testing_pynamodb_models.py
api/financier/shared/: config.py
api/financier/shared/models/: actions.py  base.py  features.py
api/financier/shared/services/: entities_manager.py
api/financier/shared/utils/: naming.py  requests.py  responses.py
api/financier/stacks/apigateway/: api_gateway_stack.py
api/financier/stacks/functions/: functions_stack.py
api/layers/: requirements.txt
assets/coming-soon/: index.html
financier/: financier_stack.py
financier/sandbox/: testing_pynamodb_models.py
financier/shared/: config.py
financier/shared/models/: base.py  errors.py  expense.py  urls.py
financier/shared/services/: entities_manager.py
financier/shared/utils/: actions.py  features.py  naming.py  requests.py  responses.py
financier/stacks/apigateway/: api_gateway_stack.py
financier/stacks/database/: database_stack.py
financier/stacks/functions/: functions_stack.py
src/: index.html  styles.scss
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.server.ts  app.config.ts  app.routes.ts
src/app/pages/ai/: ai.component.ts
src/app/pages/budget/: budget.component.ts
src/app/shared/: data-formatter.pipe.ts  date-formatter.pipe.spec.ts  shortener.pipe.ts
src/app/styles/: financier_theme.scss
tests/unit/: test_financier_stack.py
(+45 files in other folders)
